--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>JPEG Viewer</title>
   </head>
   <body>
-    <script src="/src/jpeg.js"></script>
+    <script type="module" src="/src/jpeg.js"></script>
     <script type="module" src="/src/index.js"></script>
     <canvas id="main"></canvas>
     <canvas id="selected-block"></canvas>
