--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
     <title>JPEG Viewer</title>
-    <script type="module" crossorigin src="/assets/index.4a0d58c9.js"></script>
-    <link rel="stylesheet" href="/assets/index.bb310ecb.css">
+    <script type="module" crossorigin src="./assets/index.9ca6eefb.js"></script>
+    <link rel="stylesheet" href="./assets/index.bb310ecb.css">
   </head>
   <body>
     
